--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "validator",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Simple form validation",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,17 @@
     "url": "git+https://github.com/Zveromag/validator.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "authors": [
+    {
+      "name": "Ivan Tarakanov",
+      "email": "zveerko@gmail.com"
+    },
+    {
+      "name": "Ivan Kuzmichov",
+      "url": "https://github.com/k-ivan"
+    }
+  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Zveromag/validator/issues"
   },
